# duneai

./: .gitignore
duneai/: .cproject  .project  CMakeLists.txt  CMakePresets.json  GameMasterClient.cpp  GameMasterClient.h  IDevActions.h  IGameMasterActions.h  IPlayerActions.h  actions.cc  actions.h  actor.cpp  actor.h  areaid.h  arrakis.cc  arrakis.h  auction.cc  auction.h  battle.cpp  battle.h  battleplan.cc  battleplan.h  broker.cpp  broker.h  conflict.h  conflicts.cpp  conflicts.h  deletedefaults.h  devgame.cpp  devgame.h  enumlabels.h  event.h  example.cc  factionposition.h  forces.cc  forces.h  game.cc  game.h  gameconstants.cc  gameconstants.h  (+28 more)
duneai/examples/: example.cc  exampledevclient.cc
duneai/server/: connection.h  main.cc  server.cc  server.h
duneai/tools/: debugtool.cc  debugwindow.cc  debugwindow.h  imguilogger.cc  imguilogger.h
